a draft implementation for the ingestion pipeline